# docpdf

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.bat  build_comparison.py  build_cx_freeze.bat  build_exe.bat  build_nuitka.bat  build_nuitka_optimized.bat  build_nuitka_simple.bat  docpdf.cpp  docpdf.h  docpdf.py  document_converter.py  main.cpp  mainwindow.cpp  mainwindow.h  nuitka-crash-report.xml  requirements.txt  run_converter.bat  run_docpdf.bat  setup_cx_freeze.py
.github/workflows/: build-cpp.yml  build.yml  test-build.yml
